# epistemic_case_mapper

./: .gitignore  AGENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  curated_submission_manifest.json  maintainability_policy.toml  pyproject.toml  requirements.txt  submission_manifest.yaml
artifacts/: README.md  codex_56_truth_boundary_execution_report.md
docs/: ADDING_A_CASE.md  ARCHITECTURE.md  ARTIFACT_FORMATS.md  CASE_INIT_AND_MODEL_BACKENDS.md  CURRENT_STATE.md  DECISION_MODEL_COMPLETION_AUDIT.md  DECISION_MODEL_LIVE_BACKEND_COMPARISON.md  DECISION_MODEL_PIPELINE_PLAN.md  DECISION_RECOVERY_ACTUAL_COMPARISON_20260711.md  DECISION_SPACE_EROSION_DIFFERENTIATION.md  DECISION_SPACE_FRAMEWORK_INTEGRATION.md  ENGINE_ARCHITECTURE.md  EPISTEMIC_CASE_MAPPER_WRITEUP.md  EVIDENCE_AND_LIMITATIONS.md  FLF_AUDITOR_WALKTHROUGH_EXAMPLE.md  FLF_BEFORE_AFTER_COMPARISON.md  FLF_CONTEST_CRITERIA_SELF_ASSESSMENT.md  FLF_JUDGE_INDEX.md  FLF_JUDGE_WALKTHROUGH.md  FLF_SELF_ASSESSMENT_AND_LIMITATIONS.md  FLF_SUBMISSION_DRAFT.md  FULL_CASE_KNOWLEDGE_BASE_PLAN.md  GENERALIZABILITY_RED_TEAM.md  GENERATED_MAP_BRIEFING_IMPLEMENTATION_PLAN.md  HUMAN_AUDIT_GUIDE.md  INVESTIGATOR_CHALLENGE.md  INVESTIGATOR_CHALLENGE_PROTOCOL.md  LARGE_EGGS_SOURCE_STRESS_CASE.md  LLM_DETERMINISTIC_SPLIT.md  MIGRATING_FLF_SUBMISSION.md  NEW_SOURCE_UPDATE_DEMO.md  OPERATIONAL_REALISM_AUDIT.md  OPERATIONAL_WORKFLOW_AND_REALISM.md  PACKAGE_MANIFEST_SPEC.md  PIPELINE_DEMONSTRATION_EXAMPLES.md  PROMPT_INVENTORY.md  PROOF_BY_EXAMPLE.md  README.md  RECOVER_REPAIR_UPDATE_DEMO.md  REFERENCE_LINEAGE.md  (+11 more)
scripts/: ecm.py  (+39 more)
(+1566 files in other folders)
