[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "epistemic-case-mapper"
version = "0.1.0"
description = "Prototype workflow for structured AI-assisted epistemic case mapping"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
