[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "epistemic-case-mapper"
version = "0.1.0"
description = "Prototype workflow for structured AI-assisted epistemic case mapping"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
  "PyYAML>=6.0",
  "networkx>=3.0",
  "pydantic>=2.0",
  "scikit-learn>=1.3",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
langextract = ["langextract>=1.0"]

[project.scripts]
ecm = "epistemic_case_mapper.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
norecursedirs = ["artifacts"]
